src/objects/Testing_Plans__c.object
<CustomObject>
    <description>This table contains a list of all business (primarily marketing) hypothesis testing plans</description>
    <fields>
        <fullName>Conclusion__c</fullName>
        <label>Conclusion</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMA__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is the market that the test is occurring in.</description>
        <label>DMA</label>
        <referenceTo>DMA__c</referenceTo>
        <relationshipName>Testing_Plans</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hypothesis__c</fullName>
        <defaultValue>&quot;I believe: &quot;</defaultValue>
        <description>This is the written statement of what the hypothesis being tested is.</description>
        <label>Hypothesis</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proposed_Approach__c</fullName>
        <label>Proposed Approach</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proposed_Test_Length__c</fullName>
        <description>How many days do you expect it will take to run the  test and get a clean result?</description>
        <label>Proposed Test Length</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>Inconclusive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risks__c</fullName>
        <label>Risks</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The date the test went live</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proposed</fullName>
                    <default>true</default>
                    <label>Proposed</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Legacy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Success_Measure__c</fullName>
        <label>Success Measure</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Type__c</fullName>
        <description>What category of test would this hypothesis fall into?</description>
        <label>Testing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Broadcast Buying</fullName>
                </value>
                <value>
                    <fullName>Print Buying</fullName>
                </value>
                <value>
                    <fullName>Broadcast Creative</fullName>
                </value>
                <value>
                    <fullName>Print Creative</fullName>
                </value>
                <value>
                    <fullName>Digital Display</fullName>
                </value>
                <value>
                    <fullName>Digital Search</fullName>
                </value>
                <value>
                    <fullName>Website Optimization</fullName>
                </value>
                <value>
                    <fullName>Business Operations</fullName>
                </value>
                <value>
                    <fullName>Direct Mail Campaign</fullName>
                </value>
                <value>
                    <fullName>Email Campaign</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Testing Plan</label>
    <listViews>
        <fullName>Active_Test_Plans</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>DMA__c</columns>
        <columns>Test_Type__c</columns>
        <columns>Success_Measure__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Result__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>End_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Active Test Plans</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Summary__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>DMA__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Hypothesis__c</columns>
        <columns>Conclusion__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Test-{000000}</displayFormat>
        <label>Test Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Testing Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Valid_Window</fullName>
        <active>true</active>
        <description>A test cannot have a negative time window.</description>
        <errorConditionFormula>Start_Date__c &lt;  End_Date__c</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>The test date ranges are invalid.</errorMessage>
    </validationRules>
</CustomObject>